tests/type-errors/no_var_sum.arl
archetype no_var_sum

asset my_asset identified by id {
  id : string;
  v1 : int;
  v2 : int;
} initialized by {
  {"id0"; 0};
  {"id1"; 1};
  {"id2"; 2}
}

variable res : int = 0

entry exec () {
  specification {
    s0: res = 3;
  }
  effect {
    var n : int = 1;
    res := my_asset.sum(v1 + n)
  }
}
